Assets updated for swagger specs (#1057)

--- a/swagger/index.html
+++ b/swagger/index.html
@@ -134,6 +134,7 @@
                             {name: 'NetworkRuntime', value: 'NetworkRuntime'},
                             {name: 'NetworkSecurityPolicy', value: 'NetworkSecurityPolicy'},
                             {name: 'NetworkService', value: 'NetworkService'},
+                            {name: 'ObjectAccessPolicy', value: 'ObjectAccessPolicy'},
                             {name: 'PingAccessAgent', value: 'PingAccessAgent'},
                             {name: 'PKIProfile', value: 'PKIProfile'},
                             {name: 'Pool', value: 'Pool'},
