--- a/swagger/index.html
+++ b/swagger/index.html
@@ -95,6 +95,9 @@
                             {name: 'AvailabilityZone', value: 'AvailabilityZone'},
                             {name: 'Backup', value: 'Backup'},
                             {name: 'BackupConfiguration', value: 'BackupConfiguration'},
+                            {name: 'BotConfigConsolidator', value: 'BotConfigConsolidator'},
+                            {name: 'BotDetectionPolicy', value: 'BotDetectionPolicy'},
+                            {name: 'BotMapping', value: 'BotMapping'},
                             {name: 'CertificateManagementProfile', value: 'CertificateManagementProfile'},
                             {name: 'Cloud', value: 'Cloud'},
                             {name: 'CloudConnectorUser', value: 'CloudConnectorUser'},
@@ -114,6 +117,7 @@
                             {name: 'ErrorPageProfile', value: 'ErrorPageProfile'},
                             {name: 'FederationCheckpoint', value: 'FederationCheckpoint'},
                             {name: 'FileObject', value: 'FileObject'},
+                            {name: 'GeoDB', value: 'GeoDB'},
                             {name: 'Gslb', value: 'Gslb'},
                             {name: 'GslbGeoDbProfile', value: 'GslbGeoDbProfile'},
                             {name: 'GslbService', value: 'GslbService'},
